--- a/web/themes/digitac/scss/03_component/_block-slider-news.scss
+++ b/web/themes/digitac/scss/03_component/_block-slider-news.scss
@@ -124,6 +124,7 @@
                 font-size: rem(20px);
                 line-height: rem(30px);
                 color: $primary;
+                text-align: left;
                 text-decoration: none;
             }
 
