--- a/web/themes/digitac/scss/03_component/_table.scss
+++ b/web/themes/digitac/scss/03_component/_table.scss
@@ -1,4 +1,4 @@
-.view-display-id-page_1,
+.view-display-id-page_1:not(.view-view-retos),
 .view-display-id-page_4,
 .view-display-id-page_5,
 .view-display-id-page_6 {
