--- a/web/themes/digitac/scss/05_theme/_view-id-view_retos.scss
+++ b/web/themes/digitac/scss/05_theme/_view-id-view_retos.scss
@@ -22,6 +22,11 @@
 
             @include media(md) {
                 width: auto;
+                margin-top: rem(32px);
+            }
+
+            @include media(lg) {
+                margin-top: 0;
             }
 
             form {
