--- a/web/themes/digitac/templates/nodes/node--81.html.twig
+++ b/web/themes/digitac/templates/nodes/node--81.html.twig
@@ -428,26 +428,28 @@ window.onload = getActiveTab;
           <span>Ranking usuarios</span>
 
           <div class="selectBox">
-            <div class="selectBox__value">PT</div>
+            <div class="selectBox__value">
+              <a href="#">Con más comentarios</a>
+            </div>
             <ul class="dropdown-menu" class="nav nav-tabs" id="statisticsTab" role="tablist">
               <li class="nav-item" role="presentation">
-                <button class="dropdown-item nav-link active is-active" data-title="Comentarios" id="comentarios-tab" data-bs-toggle="tab" data-bs-target="#comentarios" type="button" role="tab" aria-controls="comentarios" aria-selected="true">
-                  Comentarios
+                <button class="dropdown-item nav-link active is-active" data-title="Con más comentarios" id="comentarios-tab" data-bs-toggle="tab" data-bs-target="#comentarios" type="button" role="tab" aria-controls="comentarios" aria-selected="true">
+                  Con más comentarios
                 </button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="dropdown-item nav-link" data-title="Retos" id="retos-tab" data-bs-toggle="tab" data-bs-target="#retos" type="button" role="tab" aria-controls="retos" aria-selected="false">
-                  Retos
+                <button class="dropdown-item nav-link" data-title="Con más Retos" id="retos-tab" data-bs-toggle="tab" data-bs-target="#retos" type="button" role="tab" aria-controls="retos" aria-selected="false">
+                  Con más Retos
                 </button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="dropdown-item nav-link" data-title="Ideas" id="ideas-tab" data-bs-toggle="tab" data-bs-target="#ideas" type="button" role="tab" aria-controls="ideas" aria-selected="false">
-                  Ideas
+                <button class="dropdown-item nav-link" data-title="Con más Ideas" id="ideas-tab" data-bs-toggle="tab" data-bs-target="#ideas" type="button" role="tab" aria-controls="ideas" aria-selected="false">
+                  Con más Ideas
                 </button>
               </li>
               <li class="nav-item" role="presentation">
-                <button class="dropdown-item nav-link" data-title="Experiencias" id="experiencias-tab" data-bs-toggle="tab" data-bs-target="#experiencias" type="button" role="tab" aria-controls="experiencias" aria-selected="false">
-                  Experiencias
+                <button class="dropdown-item nav-link" data-title="Con más Experiencias" id="experiencias-tab" data-bs-toggle="tab" data-bs-target="#experiencias" type="button" role="tab" aria-controls="experiencias" aria-selected="false">
+                  Con más Experiencias
                 </button>
               </li>
             </ul>
