--- a/web/themes/digitac/templates/nodes/node--experiencia.html.twig
+++ b/web/themes/digitac/templates/nodes/node--experiencia.html.twig
@@ -122,7 +122,7 @@
 
         <div class="headband__col">
           <div class="comments">
-            <span class="sr-only">Comentarios:</span> {{ content.field_idea_comentarios['#items'].comment_count }}
+            <span class="visually-hidden">Comentarios:</span> {{ content.field_idea_comentarios['#items'].comment_count }}
           </div>
 
           {{ drupal_view('votingapi_votes', 'block_2', node.id ) }}
@@ -206,7 +206,7 @@
             <div class="tab__comments">
               {{ content.field_idea_comentarios}}
             </div> {# tab comments #}
-            
+
             {% if not logged_in %}
               <span class="ratings__login">{{'Para hacer un comentario'|t}}&nbsp;<a href="/user/login">necesitas estar logado</a></span>
             {% endif %}
