--- a/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
+++ b/web/themes/digitac/templates/views/views-view-fields--distributivas--block.html.twig
@@ -56,7 +56,7 @@
         </div>
         {% endif %}
         {% if tiene_comentarios == 1 %}
-        <div class="comments"><span class="sr-only">Comentarios</span> {{ fields.comment_count.content }}</div>
+        <div class="comments"><span class="visually-hidden">Comentarios</span> {{ fields.comment_count.content }}</div>
         {% endif %}
     </div>
 
