--- a/web/themes/digitac/scss/05_theme/page/_login.scss
+++ b/web/themes/digitac/scss/05_theme/page/_login.scss
@@ -8,6 +8,10 @@
         align-items: center;
     }
 
+    @include media(lg) {
+       margin-bottom: rem(-60px);
+    }
+
     @include media(xl) {
         min-height: auto;
     }
@@ -36,7 +40,6 @@
                 width: rem(176px);
                 padding: 0;
                 position: absolute;
-                bottom: rem(60px);
                 bottom: rem(60px);
                 left: rem(60px);
                 z-index: 2;
@@ -99,7 +102,7 @@
             @include media(md) {
                 max-width: rem(520px);
                 margin: 0 auto;
-                padding: rem(100px) rem(32px) rem(54px);
+                padding: rem(80px) rem(32px) rem(54px);
                 background: $white;
                 box-shadow: 0 20px 24px -4px rgba(16, 24, 40, 0.08), 0px 8px 8px -4px rgba(16, 24, 40, 0.03);
                 border-radius: rem(12px);
